--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
 	<title>Color Game</title>
+<!-- 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+	<h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+	<div id="container">
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+	</div>
 
+	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
