--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
 	<title>Color Game</title>
 <!-- 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+	<h1>The Great
+	<br>
+	<span id="colorDisplay">RGB</span>
+	<br>
+	Color Game</h1>
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
