--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Color Game</title>
-<!-- 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -15,8 +14,8 @@
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
-		<button id="easyBtn">Easy</button>
-		<button id="hardBtn" class="selected">Hard</button>
+		<button class="mode">Easy</button>
+		<button class="mode selected">Hard</button>
 	</div>
 	<div id="container">
 		<div class="square"></div>
